fixed long pics overflowing

--- a/app/assets/stylesheets/pages/_item_show.scss
+++ b/app/assets/stylesheets/pages/_item_show.scss
@@ -77,9 +77,8 @@
 
 .item-photo {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   border-radius: 7px;
-  // display: center;
 }
 
 .description {
